[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perfbench"
version = "0.1.0"
description = "A dummy performance benchmarking tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "gitpython>=3.1.0",
]

[project.scripts]
compute = "perfbench.cli:compute_main"
evaluate = "perfbench.cli:evaluate_main"
